<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_margin="10dp"
                    android:gravity="center">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/amount_label"/>

                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:layout_margin="10dp">

                    <EditText
                        android:id="@+id/amount_edt"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/amount_hint"
                        android:inputType="number"
                        android:minHeight="48dp"
                        android:contentDescription="@string/amount_hint"
                        android:autofillHints="creditCardNumber"/>

                </RelativeLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_margin="10dp"
                    android:gravity="center">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/type_label"/>

                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:layout_margin="10dp">

                    <EditText
                        android:id="@+id/type_edt"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/type_hint"
                        android:inputType="text"
                        android:minHeight="48dp"
                        android:contentDescription="@string/type_hint"
                        android:autofillHints="username"/>

                </RelativeLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_margin="10dp"
                    android:gravity="center">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/note_label"/>

                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:layout_margin="10dp">

                    <EditText
                        android:id="@+id/note_edt"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/note_hint"
                        android:inputType="text"
                        android:minHeight="48dp"
                        android:contentDescription="@string/note_hint"
                        android:autofillHints="postalAddress"/>

                </RelativeLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:layout_margin="10dp"
                    android:gravity="center">

                    <Button
                        android:id="@+id/btn_del_Delete"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/delete"
                        android:textAppearance="?android:textAppearanceMedium"
                        android:textColor="@android:color/white"
                        android:backgroundTint="@color/nav_header"/>

                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:layout_margin="10dp"
                    android:gravity="center">

                    <Button
                        android:id="@+id/btn_upd_Update"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/update"
                        android:textAppearance="?android:textAppearanceMedium"
                        android:textColor="@android:color/white"
                        android:backgroundTint="@color/nav_header"/>

                </RelativeLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>
